--- a/os/Cargo.toml
+++ b/os/Cargo.toml
@@ -9,13 +9,11 @@ edition = "2021"
 [dependencies]
 riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
 lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
-log = "0.4"
-bitflags = "1.2.1"
 buddy_system_allocator = "0.6"
-
-[dependencies.polyhal]
-features = ["kcontext"]
-git = "https://github.com/Byte-OS/polyhal.git"
+bitflags = "1.2.1"
+xmas-elf = "0.7.0"
+log = "0.4"
+polyhal = { git = "https://github.com/Byte-OS/polyhal.git", features = ["kcontext"]}
 
 [profile.release]
 debug = true
